--- a/DemoASPMVC/appsettings.json
+++ b/DemoASPMVC/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "default": "Data Source=DESKTOP-56GOFPS\\DEVPERSO;Initial Catalog=TechniGameDb;Integrated Security=True;"
+  }
 }
