--- a/DemoASPMVC/DemoASPMVC.csproj
+++ b/DemoASPMVC/DemoASPMVC.csproj
@@ -11,4 +11,8 @@
     <PackageReference Include="System.Data.SqlClient" Version="4.8.5" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\DemoASPMVC_DAL\DemoASPMVC_DAL.csproj" />
+  </ItemGroup>
+
 </Project>
