--- a/DemoASPMVC/appsettings.json
+++ b/DemoASPMVC/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    //"default": "Data Source=DESKTOP-56GOFPS\\DEVPERSO;Initial Catalog=TechniGameDb;Integrated Security=True;",
-    "default": "Data Source=STEVEBSTORM\\MSSQLSERVER01;Initial Catalog=TechniGameDB;Integrated Security=True;"
+    "default": "Data Source=DESKTOP-56GOFPS\\DEVPERSO;Initial Catalog=TechniGameDb;Integrated Security=True;",
+    //"default": "Data Source=STEVEBSTORM\\MSSQLSERVER01;Initial Catalog=TechniGameDB;Integrated Security=True;"
   }
 }
